--- a/GIK-CENTRAL/index.html
+++ b/GIK-CENTRAL/index.html
@@ -672,7 +672,7 @@
         <section class="section contact" id="contact" aria-label="contact">
           <div class="container">
 
-            <h2 class="h2 section-title">Contact With Us</h2>
+            <h2 class="h2 section-title">CONTACT US</h2>
 
             <p class="section-text">
               Doubtfull about something or want to give some suggestions? we are all ears
