--- a/GIK-CENTRAL/Beginners-Guide/timeline/index.html
+++ b/GIK-CENTRAL/Beginners-Guide/timeline/index.html
@@ -349,7 +349,7 @@
 
         
         <h1 class="heading" style="text-align: center;">
-               <a href="/innohub/index.html" style="text-decoration: none; color: white;"> GO BACK</a>
+               <a href="/GIK-CENTRAL/index.html" style="text-decoration: none; color: white;"> GO BACK</a>
             </h1>
 
         <!-- AOS Animation -->
