--- a/GIK-CENTRAL/index.html
+++ b/GIK-CENTRAL/index.html
@@ -720,9 +720,7 @@
                     <h3 class="h3 card-title">Mail Here</h3>
 
                     <a href="mailto:hello@luaz.com"
-                      class="card-link">hello@luaz.com</a>
-                    <a href="mailto:info@luaz.com"
-                      class="card-link">info@luaz.com</a>
+                      class="card-link">gikicentral@gmail.com</a>
 
                   </div>
 
@@ -759,13 +757,9 @@
 
                   <div class="card-content">
 
-                    <h3 class="h3 card-title">Call Here</h3>
+                    <h3 class="h3 card-title">Text Here</h3>
 
-                    <a href="tel:+1234567890" class="card-link">+123 456
-                      7890</a>
-                    <a href="tel:+2414524526" class="card-link">+241 452
-                      4526</a>
-
+                    <a href="tel:+1234567890" class="card-link">+92 321-3146166</a>
                   </div>
 
                 </div>
