--- a/GIK-CENTRAL/index.html
+++ b/GIK-CENTRAL/index.html
@@ -67,7 +67,8 @@
             </li>
 
             <li>
-              <a href="./Beginners-Guide/timeline/index.html" class="btn btn-primary">All about GIKI</a>
+              <a href="./Beginners-Guide/timeline/index.html"
+                class="btn btn-primary">All about GIKI</a>
             </li>
 
           </ul>
@@ -104,7 +105,8 @@
                 and the latest campus updates — all in one place.
               </p>
 
-              <a href="./Beginners-Guide/timeline/index.html" class="btn btn-primary">All About GIKI</a>
+              <a href="./Beginners-Guide/timeline/index.html"
+                class="btn btn-primary">All About GIKI</a>
 
             </div>
 
@@ -125,7 +127,8 @@
             <h2 class="h2 section-title">A quick head start to the education
               system, society culture and other things in giki!</h2>
 
-            <a href="../GIK-CENTRAL/Beginners-Guide/timeline/index.html" class="btn btn-secondary">Click Here</a>
+            <a href="../GIK-CENTRAL/Beginners-Guide/timeline/index.html"
+              class="btn btn-secondary">Click Here</a>
 
           </div>
         </section>
@@ -272,6 +275,145 @@
         <!-- 
         - #PROJECT
       -->
+        <section class="section service" id="service" aria-label="service">
+          <div class="container">
+
+            <h2 class="h2 section-title">RESOURCES FOR STUDENTS</h2>
+
+            <p class="section-text">
+              From academic support to creative design,
+              we offer everything a GIKIan might need — in one place
+            </p>
+
+            <ul class="grid-list">
+
+              <li>
+                <div class="service-card">
+
+                  <div class="card-icon" style="background-color: #13c4a1">
+                    <ion-icon name="chatbox"></ion-icon>
+                  </div>
+
+                  <h3 class="h3">
+                    <a href="./Resources/resources.html"
+                      class="card-title">STUDY MATERIAL</a>
+                  </h3>
+
+                  <p class="card-text">
+                    Get all the study material for every semmester for free
+                    <a style="text-decoration: underline;"
+                      href="./Resources/resources.html">click here</a>
+                  </p>
+
+                </div>
+              </li>
+
+              <li>
+                <div class="service-card">
+
+                  <div class="card-icon" style="background-color: #6610f2">
+                    <ion-icon name="desktop"></ion-icon>
+                  </div>
+
+                  <h3 class="h3">
+                    <a href="#" class="card-title">MESS MENU & COMPLAINS</a>
+                  </h3>
+
+                  <p class="card-text">
+                    Get the latest MESS MENU from here
+                  </p>
+                  <a href>Comming Soon ...</a>
+
+                </div>
+              </li>
+
+              <li>
+                <div class="service-card">
+
+                  <div class="card-icon" style="background-color: #ffb700">
+                    <ion-icon name="bulb"></ion-icon>
+                  </div>
+
+                  <h3 class="h3">
+                    <a href="#" class="card-title">TUCK -DETAILS AND MENU</a>
+                  </h3>
+
+                  <p class="card-text">
+                    MENU of RAJU,AYAN and Hot and spicy
+                  </p>
+                  <a href>Comming soon ....</a>
+
+                </div>
+              </li>
+
+              <li>
+                <div class="service-card">
+
+                  <div class="card-icon" style="background-color: #fc3549">
+                    <ion-icon name="phone-portrait"></ion-icon>
+                  </div>
+
+                  <h3 class="h3">
+                    <a href="#" class="card-title">TRANSPORT TIMING</a>
+                  </h3>
+
+                  <p class="card-text">
+                    Updates on transport from every week
+                  </p>
+                  <a style="text-decoration: underline;" href>Click here to
+                    review</a>
+
+                </div>
+              </li>
+
+              <li>
+                <div class="service-card">
+
+                  <div class="card-icon" style="background-color: #00d280">
+                    <ion-icon name="archive"></ion-icon>
+                  </div>
+
+                  <h3 class="h3">
+                    <a href="#" class="card-title">CAFE RATES & MENU</a>
+                  </h3>
+
+                  <p class="card-text">
+                    DETAILS of Cafe menu and rates
+                  </p>
+                  <a href style="text-decoration: underline;">Click Here</a>
+
+                </div>
+              </li>
+
+              <li>
+                <div class="service-card">
+
+                  <div class="card-icon" style="background-color: #ff612f">
+                    <ion-icon name="build"></ion-icon>
+                  </div>
+
+                  <h3 class="h3">
+                    <a href="#" class="card-title">LOST AND FOUND</a>
+                  </h3>
+
+                  <p class="card-text">
+                    Get updates on lost and found items
+                  </p>
+
+                  <a href style="text-decoration: underline;">Click Here</a>
+
+                </div>
+              </li>
+
+            </ul>
+
+          </div>
+        </section>
+
+
+
+
+
 
         <section class="section project" id="project" aria-label="project">
           <div class="container">
@@ -500,7 +642,7 @@
                 <br>
                 We aim to:
                 <br>
-                  Showcase the vibrant academic and co-curricular life at GIKI.
+                Showcase the vibrant academic and co-curricular life at GIKI.
                 <br>
                 Connect current students, alumni, and future GIKIans.
                 <br>
@@ -517,6 +659,26 @@
 
           </div>
         </section>
+
+
+
+
+
+
+
+
+        
+
+
+
+
+
+
+
+
+
+
+
 
         <!-- 
         - #CTA
@@ -541,13 +703,15 @@
                   </div>
 
                   <h3 class="h3">
-                    <a href="./Resources/resources.html" class="card-title">RESOURCES FOR ALL YEARS
+                    <a href="./Resources/resources.html"
+                      class="card-title">RESOURCES FOR ALL YEARS
                       STUDENTS</a>
                   </h3>
 
                   <p class="card-text">
                     Get all the resources for every semmester for free
-                    <a style="text-decoration: underline;" href="./Resources/resources.html">click here</a>
+                    <a style="text-decoration: underline;"
+                      href="./Resources/resources.html">click here</a>
                   </p>
 
                 </div>
@@ -675,16 +839,17 @@
             <h2 class="h2 section-title">CONTACT US</h2>
 
             <p class="section-text">
-              Doubtfull about something or want to give some suggestions? we are all ears
+              Doubtfull about something or want to give some suggestions? we are
+              all ears
             </p>
 
-            <form action class="contact-form">
+            <form id="contact-form" class="contact-form">
 
               <div class="input-wrapper">
                 <input type="text" name="name" aria-label="name"
                   placeholder="Your name*" required class="input-field">
 
-                <input type="email" name="email_address" aria-label="email"
+                <input type="email" name="email" aria-label="email"
                   placeholder="Email address*" required
                   class="input-field">
               </div>
@@ -756,7 +921,8 @@
 
                     <h3 class="h3 card-title">Text Here</h3>
 
-                    <a href="tel:+1234567890" class="card-link">+92 321-3146166</a>
+                    <a href="tel:+1234567890" class="card-link">+92
+                      321-3146166</a>
                   </div>
 
                 </div>
@@ -806,6 +972,27 @@
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    <script type="text/javascript"
+      src="https://cdn.emailjs.com/dist/email.min.js"></script>
+    <script type="text/javascript">
+  (function() {
+    emailjs.init("KQ2BMOApAeNDUwUIG"); // Replace with your EmailJS user ID
+  })();
+</script>
+    <script>
+  document.getElementById("contact-form").addEventListener("submit", function(event) {
+    event.preventDefault();
+
+    emailjs.sendForm("service_t5esdwm", "template_2hkyk0j", this)
+      .then(function() {
+        alert("Message sent successfully!");
+      }, function(error) {
+        alert("Failed to send message: " + JSON.stringify(error));
+      });
+
+    this.reset(); // Optionally clear the form
+  });
+</script>
 
   </body>
 
