--- a/GIK-CENTRAL/index.html
+++ b/GIK-CENTRAL/index.html
@@ -316,13 +316,13 @@
                   </div>
 
                   <h3 class="h3">
-                    <a href="#" class="card-title">MESS MENU & COMPLAINS</a>
+                    <a href="./Resources/Mess-Menu/Mess-menu.html" class="card-title">MESS MENU & COMPLAINS</a>
                   </h3>
 
                   <p class="card-text">
                     Get the latest MESS MENU from here
                   </p>
-                  <a href>Comming Soon ...</a>
+                  <a style="text-decoration: underline;" href="./Resources/Mess-Menu/Mess-menu.html">Click here</a>
 
                 </div>
               </li>
@@ -374,13 +374,13 @@
                   </div>
 
                   <h3 class="h3">
-                    <a href="#" class="card-title">CAFE RATES & MENU</a>
+                    <a href="./Resources/Cafe-Menu/Cafe-Menu.html" class="card-title">CAFE RATES & MENU</a>
                   </h3>
 
                   <p class="card-text">
                     DETAILS of Cafe menu and rates
                   </p>
-                  <a href style="text-decoration: underline;">Click Here</a>
+                  <a href="./Resources/Cafe-Menu/Cafe-Menu.html" style="text-decoration: underline;">Click Here</a>
 
                 </div>
               </li>
@@ -393,14 +393,14 @@
                   </div>
 
                   <h3 class="h3">
-                    <a href="#" class="card-title">LOST AND FOUND</a>
+                    <a href="./Resources/Lost-and-found/Lost-and-found.html" class="card-title">LOST AND FOUND</a>
                   </h3>
 
                   <p class="card-text">
                     Get updates on lost and found items
                   </p>
 
-                  <a href style="text-decoration: underline;">Click Here</a>
+                  <a  href="./Resources/Lost-and-found/Lost-and-found.html" style="text-decoration: underline;">Click Here</a>
 
                 </div>
               </li>
