--- a/GIK-CENTRAL/Resources/Lost-and-found/Lost-and-found.html
+++ b/GIK-CENTRAL/Resources/Lost-and-found/Lost-and-found.html
@@ -128,7 +128,7 @@
   </table>
 
   <div class="form-section">
-    <h2>REPORT A LOST ITEM</h2>
+    <h2>REPORT A LOST/FOUND ITEM</h2>
     <form id="lostItemForm">
       <input type="text" name="name" placeholder="Your Name" required />
       <input type="text" name="item_name" placeholder="Item Name" required />
