--- a/GIK-CENTRAL/Beginners-Guide/timeline/index.html
+++ b/GIK-CENTRAL/Beginners-Guide/timeline/index.html
@@ -8,6 +8,7 @@
         <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
         <!-- Custom css -->
         <link rel="stylesheet" href="style.css">
+         <link rel="shortcut icon" href="../../favicon.svg" type="image/svg+xml">
         <!-- Title -->
         <title>FRESHERS GUIDE THROUGH GIKI</title>
     </head>
