--- a/GIK-CENTRAL/Resources/Cafe-Menu/Cafe-Menu.html
+++ b/GIK-CENTRAL/Resources/Cafe-Menu/Cafe-Menu.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+   <link rel="shortcut icon" href="../../favicon.svg" type="image/svg+xml">
   <meta charset="UTF-8">
   <title>GIKI CAFE MENU</title>
   <style>
@@ -87,16 +88,25 @@
       <th>Item</th>
       <th>Price (PKR)</th>
     </tr>
-    <tr><td>Chicken Burger</td><td>250</td></tr>
-    <tr><td>Beef Burger</td><td>270</td></tr>
-    <tr><td>Zinger Burger</td><td>300</td></tr>
-    <tr><td>Club Sandwich</td><td>280</td></tr>
-    <tr><td>Fries</td><td>120</td></tr>
+    <tr><td>Chicken Biryani</td><td>240 PKR</td></tr>
+    <tr><td>Sada Biryani</td><td>150 PKR</td></tr>
+    <tr><td>Chicken Pulao</td><td>240 PKR</td></tr>
+    <tr><td>Sada Pulao</td><td>150 PKR</td></tr>
+    <tr><td>Chicken handi</td><td>240 PKR</td></tr>
+    <tr><td>Macaroni/pasta</td><td>240 PKR</td></tr>
+    <tr><td>Chicken Patty Burger</td><td>220</td></tr>
+    <tr><td>Sabzi/Daal</td><td>80PKR</td></tr>
+    <tr><td>Chicken Piece(Tikka)</td><td>250PKR</td></tr>
+    <tr><td>Kabab</td><td>80</td></tr>
+    <tr><td>Roti</td><td>12</td></tr>
+    <tr><td>Paratha</td><td>40</td></tr>
+    <tr><td>Chai</td><td>60</td></tr>
+    <tr><td>Club Sandwich</td><td>180</td></tr>
     <tr><td>Shawarma</td><td>200</td></tr>
-    <tr><td>Pizza Slice</td><td>180</td></tr>
+    <tr><td>Chicken Patty</td><td>150</td></tr>
     <tr><td>Cold Drink (Can)</td><td>80</td></tr>
     <tr><td>Mineral Water</td><td>50</td></tr>
-    <tr><td>Tea</td><td>40</td></tr>
+    <tr><td>Donut</td><td>120</td></tr>
     <tr><td>Coffee</td><td>60</td></tr>
   </table>
 
