--- a/GIK-CENTRAL/index.html
+++ b/GIK-CENTRAL/index.html
@@ -341,7 +341,7 @@
                   <p class="card-text">
                     MENU of RAJU,AYAN and Hot and spicy
                   </p>
-                  <a href>Comming soon ....</a>
+                  <a href>Click here</a>
 
                 </div>
               </li>
@@ -354,13 +354,13 @@
                   </div>
 
                   <h3 class="h3">
-                    <a href="#" class="card-title">TRANSPORT TIMING</a>
+                    <a href="../GIK-CENTRAL/Resources/resources.html" class="card-title">TRANSPORT TIMING</a>
                   </h3>
 
                   <p class="card-text">
                     Updates on transport from every week
                   </p>
-                  <a style="text-decoration: underline;" href>Click here to
+                  <a style="text-decoration: underline;" href="./Resources/resources.html">Click here to
                     review</a>
 
                 </div>
