--- a/GIK-CENTRAL/Resources/Lost-and-found/Lost-and-found.html
+++ b/GIK-CENTRAL/Resources/Lost-and-found/Lost-and-found.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Lost & Found</title>
+   <link rel="shortcut icon" href="../../favicon.svg" type="image/svg+xml">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
     :root {
