--- a/GIK-CENTRAL/Resources/resources.html
+++ b/GIK-CENTRAL/Resources/resources.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="favicon.png">
+     <link rel="shortcut icon" href="../favicon.svg" type="image/svg+xml">
     <title>Coming soon!</title>
     <style>
         html,
