--- a/GIK-CENTRAL/index.html
+++ b/GIK-CENTRAL/index.html
@@ -773,8 +773,7 @@
                     and feature it on our platform to
                     maximize visibility.
                   </p>
-                  <a style="text-decoration: underline;" href>Click here to
-                    post</a>
+                  <a style="text-decoration: underline;" href>Comming soon...</a>
 
                 </div>
               </li>
@@ -815,7 +814,7 @@
                     FYP — we’ve got you covered. Just reach out.
                   </p>
 
-                  <a href style="text-decoration: underline;">Click Here</a>
+                  <a href="#contact" style="text-decoration: underline;">Click Here</a>
 
                 </div>
               </li>
