--- a/GIK-CENTRAL/index.html
+++ b/GIK-CENTRAL/index.html
@@ -341,7 +341,7 @@
                   <p class="card-text">
                     MENU of RAJU,AYAN and Hot and spicy
                   </p>
-                  <a href>Click here</a>
+                  <a style="text-decoration: underline;" href>Coming on 2nd september</a>
 
                 </div>
               </li>
