--- a/GIK-CENTRAL/Resources/Mess-Menu/Mess-menu.html
+++ b/GIK-CENTRAL/Resources/Mess-Menu/Mess-menu.html
@@ -3,18 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <title>GIKI Mess Menu</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     :root {
-      --sunset-orange: #8d1f3e;
-      --lavender-gray: #710f33;
+      --sunset-orange: #b7264f;
+      --lavender-gray: #db5b17;
       --white: #ffffff;
       --border-radius: 10px;
+    }
+
+    * {
+      box-sizing: border-box;
     }
 
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(90deg, var(--sunset-orange), var(--lavender-gray));
       color: #333;
       min-height: 100vh;
       display: flex;
@@ -25,20 +29,26 @@
     }
 
     h1 {
-      color: #e6e0e0;
+      color: #2e2e2e;
       font-size: 2.5rem;
       margin-bottom: 10px;
+      text-align: center;
     }
 
     p.note {
-      color: #adabab;
+      color: #e41313;
       margin-bottom: 30px;
       font-style: italic;
       font-size: 0.95rem;
+      text-align: center;
     }
 
     .btn-group {
       margin-bottom: 25px;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+      justify-content: center;
     }
 
     button {
@@ -47,7 +57,6 @@
       border: 1px solid var(--sunset-orange);
       padding: 10px 18px;
       border-radius: var(--border-radius);
-      margin: 0 10px;
       cursor: pointer;
       font-size: 1rem;
       font-weight: 600;
@@ -61,7 +70,7 @@
     }
 
     .menu-table {
-      width: 95%;
+      width: 100%;
       max-width: 800px;
       background-color: rgba(255, 255, 255, 0.95);
       border-radius: var(--border-radius);
@@ -80,7 +89,7 @@
 
     .menu-table th {
       background-color: var(--lavender-gray);
-      color: #9b9a9a;
+      color: #f0f0f0;
     }
 
     .menu-table tr:hover {
@@ -91,63 +100,80 @@
     #date-container {
       font-size: 1rem;
       font-weight: 600;
-      color: #444;
+      color: #fff;
       margin-bottom: 20px;
       display: none;
+      text-align: center;
     }
 
-    @media (max-width: 600px) {
+    /* RESPONSIVENESS */
+    @media (max-width: 768px) {
       h1 {
-        font-size: 1.8rem;
+        font-size: 2rem;
       }
 
       button {
         padding: 8px 14px;
-        font-size: 0.9rem;
+        font-size: 0.95rem;
       }
 
       .menu-table th, .menu-table td {
-        padding: 8px 12px;
-        font-size: 0.9rem;
+        padding: 10px;
+        font-size: 0.95rem;
+      }
+    }
+
+    @media (max-width: 480px) {
+      h1 {
+        font-size: 1.6rem;
+      }
+
+      button {
+        padding: 6px 10px;
+        font-size: 0.85rem;
+      }
+
+      .menu-table th, .menu-table td {
+        padding: 8px 6px;
+        font-size: 0.85rem;
       }
     }
   </style>
 </head>
 <body>
 
-  <h1>GIKI Mess Menu</h1>
-  <p class="note">These are temporary values and will be updated on <strong>2nd September</strong>.</p>
+  <h1>GIKI MESS MENU</h1>
+  <p class="note">These are previous values and will be updated on <strong>2nd September 2025</strong>.</p>
 
   <div class="btn-group">
     <button onclick="showWeeklyMenu()">Weekly Menu</button>
     <button onclick="showDailyMenu()">Today’s Menu</button>
   </div>
   
-  
   <div id="date-container"></div>
-  
+
   <table class="menu-table" id="menu">
-      <!-- Menu will be injected here -->
-    </table>
-    <p class="note">Complain section will be added soon</strong>.</p>
+    <!-- Menu will be injected here -->
+  </table>
+
+  <p class="note">Complain section will be added soon.</p>
 
   <script>
     const weeklyMenu = [
-      { day: 'Monday', breakfast: 'Paratha, Egg', lunch: 'Chicken Biryani', dinner: 'Daal Chawal' },
-      { day: 'Tuesday', breakfast: 'Halwa Puri', lunch: 'Korma + Naan', dinner: 'Aloo Qeema' },
-      { day: 'Wednesday', breakfast: 'Toast + Jam', lunch: 'Chicken Pulao', dinner: 'Mix Sabzi' },
-      { day: 'Thursday', breakfast: 'Omelette, Paratha', lunch: 'Chana Chaat', dinner: 'Bhindi Gosht' },
-      { day: 'Friday', breakfast: 'French Toast', lunch: 'Chicken Burger', dinner: 'Chicken Curry' },
-      { day: 'Saturday', breakfast: 'Halwa Puri', lunch: 'Rice + Kabab', dinner: 'Egg Curry' },
-      { day: 'Sunday', breakfast: 'Pancakes', lunch: 'Shami Burger', dinner: 'Pulao' },
+      { day: 'Monday', breakfast: 'Paratha, Cheese Omelete', lunch: 'Haleem', dinner: 'Biryani' },
+      { day: 'Tuesday', breakfast: 'Sausage + Bread', lunch: 'Red Lobia', dinner: 'Tikka Rice' },
+      { day: 'Wednesday', breakfast: 'Bread + Omelete', lunch: 'Daal Chana + Chapli Kabab', dinner: 'Kabli Pulao' },
+      { day: 'Thursday', breakfast: 'French Toast', lunch: 'Mix Sabzi', dinner: 'Chicken Handi' },
+      { day: 'Friday', breakfast: 'Lahori Channay + Poori', lunch: 'Brown Rice + Shami', dinner: 'Chicken Karahi' },
+      { day: 'Saturday', breakfast: 'Egg + Bread + Jam', lunch: 'Macaroni', dinner: 'Chicken Pulao' },
+      { day: 'Sunday', breakfast: 'Omelete + Bread', lunch: 'Mix sabzi', dinner: 'Biryani' }
     ];
 
     function renderMenu(data) {
       const table = document.getElementById('menu');
-      const isDaily = data.length === 1;
       let html = `
         <tr>
-          <th>${isDaily ? 'Day' : 'Day'}</th>
+          <th>Day</th>
           <th>Breakfast</th>
           <th>Lunch</th>
           <th>Dinner</th>
