--- a/GIK-CENTRAL/index.html
+++ b/GIK-CENTRAL/index.html
@@ -725,14 +725,14 @@
                   </div>
 
                   <h3 class="h3">
-                    <a href="#" class="card-title">CV / PORTFOLIO DESIGNING</a>
+                    <a href="./Services/Custom-help/Custom-Help.html"  class="card-title">CV / PORTFOLIO DESIGNING</a>
                   </h3>
 
                   <p class="card-text">
                     Get your proffesional CV and portfolio made according to
                     your need
                   </p>
-                  <a href>Comming Soon ...</a>
+                  <a href="./Services/Custom-help/Custom-Help.html" style="text-decoration: underline;">Click here</a>
 
                 </div>
               </li>
@@ -745,13 +745,13 @@
                   </div>
 
                   <h3 class="h3">
-                    <a href="#" class="card-title">PROJECT/ASSIGNMENT HELP</a>
+                    <a href="./Services/Custom-help/Custom-Help.html" class="card-title">PROJECT/ASSIGNMENT HELP</a>
                   </h3>
 
                   <p class="card-text">
                     Tired of writing so many pages for an assignment. We got you
                   </p>
-                  <a href>Comming soon ....</a>
+                  <a href="./Services/Custom-help/Custom-Help.html" style="text-decoration: underline;">Click here</a>
 
                 </div>
               </li>
@@ -764,7 +764,7 @@
                   </div>
 
                   <h3 class="h3">
-                    <a href="#" class="card-title">EVENT AND CAMPAIGN
+                    <a href="./Services/Custom-help/Custom-Help.html" class="card-title">EVENT AND CAMPAIGN
                       PROMOTIONS</a>
                   </h3>
 
@@ -773,7 +773,7 @@
                     and feature it on our platform to
                     maximize visibility.
                   </p>
-                  <a style="text-decoration: underline;" href>Comming soon...</a>
+                  <a style="text-decoration: underline;" href="./Services/Custom-help/Custom-Help.html">Click here</a>
 
                 </div>
               </li>
@@ -786,14 +786,14 @@
                   </div>
 
                   <h3 class="h3">
-                    <a href="#" class="card-title">CAMPUS NEWS AND UPDATES</a>
+                    <a href="./Services/Custom-help/Custom-Help.html" class="card-title">CAMPUS NEWS AND UPDATES</a>
                   </h3>
 
                   <p class="card-text">
                     Stay updated with trending news, society activities, lost &
                     founds, and everything happening across GIKI — in one feed.
                   </p>
-                  <a href style="text-decoration: underline;">Click Here</a>
+                  <a href="./Services/Custom-help/Custom-Help.html" style="text-decoration: underline;">Click Here</a>
 
                 </div>
               </li>
@@ -806,7 +806,7 @@
                   </div>
 
                   <h3 class="h3">
-                    <a href="#" class="card-title">CUSTOM HELP & REPORTING</a>
+                    <a href="./Services/Custom-help/Custom-Help.html" class="card-title">CUSTOM HELP & REPORTING</a>
                   </h3>
 
                   <p class="card-text">
@@ -814,7 +814,7 @@
                     FYP — we’ve got you covered. Just reach out.
                   </p>
 
-                  <a href="#contact" style="text-decoration: underline;">Click Here</a>
+                  <a href="./Services/Custom-help/Custom-Help.html" style="text-decoration: underline;">Click Here</a>
 
                 </div>
               </li>
